A snapshot before migrating to another vCenter
Add dummy functions to Horizontal.

--- a/testall/config.json
+++ b/testall/config.json
@@ -73,6 +73,7 @@
         "startnas" : 1,
         "endnas"   : 4,
         "startcluster" : 1,
-        "endcluster"   : 4
+        "endcluster"   : 4,
+        "servicename"  : "Guest Introspection"
     }
 }
